# ariel-os

./: .editorconfig  .gitattributes  .gitignore  .yamllint.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  GOVERNANCE.md  README.md  ROADMAP.md  _typos.toml  ariel-os-cargo.toml  clippy.toml  committed.toml  criticalup.toml  deny.toml  laze-project.yml
.cargo/: config.toml
.github/: pull_request_template.md  renovate.json  renovate.json5
.github/workflows/: binary-size.yml  build-cache.yml  build-deploy-docs.yml  build-templates.yml  build.yml  check-changelog.yml  coverage.yml  dependencies-action.yml  git.yml  hax.yml  main.yml  matrix-bot.yml  pr-title.yml  preview-docs.yml  vetting.yml  zizmor.yml
boards/: README.md  adafruit-feather-nrf52840-express.yaml  adafruit-feather-nrf52840-sense.yaml  ai-c3.yaml  arduino-uno-q.yaml  ariel-chips.yaml  ariel-chips.yml  ariel-socs.yaml  bbc-microbit-v1.yaml  bbc-microbit-v2.yaml  dfrobot-firebeetle2-esp32-c6.yaml  dwm1001.yaml  espressif-esp32-c3-devkit-rust-1.yaml  espressif-esp32-c3-lcdkit.yaml  espressif-esp32-c6-devkitc-1.yaml  espressif-esp32-devkitc.yaml  espressif-esp32-s2-devkitc-1.yaml  espressif-esp32-s3-devkitc-1.yaml  heltec-wifi-lora-32-v3.yaml  native.yaml  nordic-thingy-91-x-nrf9151.yaml  nordic-thingy-91-x.yaml  nrf52840-mdk.yaml  nrf52840dk.yaml  nrf52dk.yaml  nrf5340dk-app.yaml  nrf5340dk-net.yaml  nrf5340dk.yaml  nrf9151-dk.yaml  nrf9160dk-nrf9160.yaml  particle-xenon.yaml  rpi-pico-w.yaml  rpi-pico.yaml  rpi-pico2-w.yaml  rpi-pico2.yaml  rpi-pico2.yml  seeedstudio-lora-e5-mini.yaml  seeedstudio-xiao-esp32c6.yaml  seeedstudio-xiao-esp32s3.yaml  seeedstudio-xiao-nrf52840-plus.yaml  (+18 more)
book/: book.toml  cmdrun-check.sh
book/src/: COC_reporting.md  CODE_OF_CONDUCT.md  SUMMARY.md  SUMMARY.md.tmpl  adding-board-support.md  adding_board_support.md  application.md  async-support.md  async_support.md  ble.md  bluetooth.md  build-system.md  build_system.md  code-editor-configuration.md  coding-conventions.md  debug-console.md  debug_console.md  debug_logging.md  development-processes.md  flashing-debugging.md  getting-started.md  getting_started.md  glossary.md  hardware-functionality-support.md  introduction.md  logging.md  memory-layout.md  multithreading.md  native-target.md  networking.md  randomness.md  storage.md  support_matrix.html  support_matrix_tier1.html  support_matrix_tier2.html  support_matrix_tier3.html  testing.md  vscode-configuration.md
book/templates/: SUMMARY.md.tmpl  board-index.md.tmpl  board-page.md.tmpl  chip-index.md.tmpl  chip-page.md.tmpl  support-matrix.html.tmpl
doc/: build_system.md  gen_board_list_html.rs  gen_board_pages_md.rs  gen_book.rs  gen_support_matrix_html.rs  schema.rs  support_matrix.yml
examples/: README.md  laze.yml
examples/alloc/: Cargo.toml  README.md  laze.yml
examples/benchmark/: Cargo.toml  laze.yml
examples/ble-advertise/: Cargo.toml  README.md  laze.yml
examples/ble-advertise/src/: main.rs
examples/ble-advertiser/: Cargo.toml  laze.yml
examples/ble-advertiser/src/: main.rs
examples/ble-keyboard/: Cargo.toml  README.md  laze.yml
examples/ble-keyboard/src/: hid.rs  main.rs
examples/ble-scan/: Cargo.toml  README.md  laze.yml
examples/ble-scan/src/: main.rs
examples/ble-scanner/: Cargo.toml  README.md  laze.yml
examples/ble-scanner/src/: main.rs
examples/ble-serial-bridge/: Cargo.toml  README.md  laze.yml
examples/ble-serial-bridge/src/: main.rs  pins.rs
examples/blinky/: Cargo.toml  README.md  laze.yml
examples/camera/: Cargo.toml  README.md  laze.yml
examples/camera/src/: main.rs  pins.rs
examples/coap-client/: Cargo.toml  README.md  laze.yml
examples/coap-client/src/: main.rs
examples/coap-server/: Cargo.toml  README.md  client.diag  laze.yml
examples/coap-server/src/: main.rs
examples/device-metadata/: Cargo.toml  README.md  laze.yml
examples/display/: Cargo.toml  laze.yml
examples/display/src/: main.rs  pins.rs
examples/gnss-position/: Cargo.toml  README.md  (+1 more)
examples/gnss-sensor-reader/: Cargo.toml  README.md  laze.yml
examples/gnss-sensor-reader/src/: main.rs  sensors.rs
examples/gpio/: Cargo.toml  README.md  laze.yml
examples/gpio/src/: main.rs  pins.rs
examples/gps-read/: Cargo.toml  laze.yml
examples/gps-read/src/: main.rs
examples/http-client/: Cargo.toml  README.md  laze.yml
examples/http-client/src/: main.rs
examples/http-server/: Cargo.toml  README.md  laze.yml
examples/http-server/src/: main.rs  pins.rs  routes.rs
examples/i2c-scanner/: Cargo.toml  laze.yml
examples/i2c-scanner/src/: main.rs  pins.rs
examples/modem/: Cargo.toml  laze.yml
examples/modem/src/: main.rs
examples/random/: Cargo.toml  README.md
examples/random/src/: main.rs
examples/sensors-debug/: Cargo.toml  README.md  laze.yml
examples/sensors-debug/src/: i2c_bus.rs  main.rs  pins.rs  sensors.rs
examples/storage/: Cargo.toml  README.md  laze.yml
examples/storage/src/: main.rs
examples/tcp-client/: Cargo.toml  README.md  laze.yml
examples/tcp-client/src/: main.rs  pins.rs
examples/tcp-echo/: Cargo.toml  README.md  laze.yml
examples/tcp-echo/src/: main.rs
examples/testing/: Cargo.toml  README.md  laze.yml
examples/testing/tests/: test.rs
examples/thermometer/: Cargo.toml  README.md  laze.yml
examples/thermometer/src/: i2c_bus.rs  main.rs  pins.rs  sensors.rs
examples/thread-async-interop/: Cargo.toml  README.md  laze.yml
examples/thread-async-interop/src/: main.rs
examples/udp-echo/: Cargo.toml  README.md  laze.yml
examples/udp-echo/src/: main.rs
examples/usb-keyboard/: Cargo.toml  README.md  laze.yml
examples/usb-keyboard/src/: main.rs  pins.rs
scripts/: debug-openocd.sh  editor-config.rs  get-coverage.sh  openocd.gdb  recorder.sh  rust-toolchain.sh  vscode.rs  vscode.sh
src/: laze.yml
src/ariel-os-alloc/: Cargo.toml  laze.yml
src/ariel-os-alloc/src/: lib.rs
src/ariel-os-bench/: Cargo.toml
src/ariel-os-bench/src/: cortexm.rs  esp.rs  lib.rs  native.rs
supply-chain/: audits.toml  config.toml
tests/: README.md  laze.yml
(+662 files in other folders)
