[workspace]
resolver = "3"
members = [
  "examples/*",
  "src/ariel-os",
  "src/ariel-os-alloc",
  "src/ariel-os-bench",
  "src/ariel-os-boards",
  "src/ariel-os-buildinfo",
  "src/ariel-os-coap",
  "src/ariel-os-debug",
  "src/ariel-os-debug-log",
  "src/ariel-os-embassy-common",
  "src/ariel-os-esp",
  "src/ariel-os-hal",
  "src/ariel-os-identity",
  "src/ariel-os-macros",
  "src/ariel-os-nrf",
  "src/ariel-os-power",
  "src/ariel-os-random",
  "src/ariel-os-rp",
  "src/ariel-os-sensors",
  "src/ariel-os-sensors-registry",
  "src/ariel-os-sensors-utils",
  "src/ariel-os-stm32",
  "src/ariel-os-storage",
  "src/lib/coapcore",
  "src/lib/rbi",
  "src/lib/ringbuffer",
  "tests/benchmarks/bench_sched_flags",
  "tests/benchmarks/bench_sched_yield",
  "tests/coap",
  "tests/coap-blinky",
  "tests/gpio",
  "tests/gpio-interrupt-nrf",
  "tests/gpio-interrupt-stm32",
  "tests/i2c-controller",
  "tests/random-getrandom",
  "tests/spi-loopback",
  "tests/spi-main",
  "tests/threading-dynamic-prios",
  "tests/threading-fpu",
  "tests/threading-lock",
  "tests/threading-mutex",
  "tests/uart-loopback",
]
exclude = ["src/lib", "doc"]
default-members = ["examples/hello-world"]

[workspace.package]
edition = "2024"
# This should be the Ariel OS MSRV.
# Some crates may have a different MSRV.
rust-version = "1.91"
repository = "https://github.com/ariel-os/ariel-os"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cfg-if = { version = "1.0.0" }
cortex-m = { version = "0.7", default-features = false, features = [
  "inline-asm",
] }
cortex-m-rt = { version = "0.7.5" }
cortex-m-semihosting = { version = "0.5" }
critical-section = { version = "1.2.0" }
featurecomb = "0.1.3"
# Disabling default features may reduce the code size by not providing atomics
# for types larger than the pointer width, which we do not use.
portable-atomic = { version = "1.11.0", default-features = false, features = [
  "require-cas",
] }
semihosting = { version = "0.1.16", default-features = false }

embassy-embedded-hal = { version = "0.5.0", default-features = false }
embassy-executor = { version = "0.9.1", default-features = false }
embassy-futures = { version = "0.1.2", default-features = false }
embassy-hal-internal = { version = "0.3.0", default-features = false }
embassy-net = { version = "0.7.1", default-features = false }
embassy-net-driver-channel = { version = "0.3.2", default-features = false }
embassy-nrf = { version = "0.8.0", default-features = false }
embassy-rp = { version = "0.8", default-features = false }
embassy-stm32 = { version = "0.4", default-features = false }
embassy-sync = { version = "0.7.2", default-features = false }
embassy-time = { version = "0.5.0", default-features = false }
embassy-time-driver = { version = "0.2.1", default-features = false }
embassy-time-queue-utils = { version = "0.3.0", default-features = false }
embassy-usb = { version = "0.5.1", default-features = false }

embedded-hal = { version = "1.0.0", default-features = false }
embedded-hal-async = { version = "1.0.0", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-async = { version = "0.6.1", default-features = false }
embedded-nal-coap = "=0.1.0-alpha.5"
embedded-storage = { version = "0.3.1" }
embedded-storage-async = { version = "0.4.1" }
embedded-test = { version = "0.7.0", default-features = false, features = [
  "ariel-os",
] }

esp-alloc = { version = "0.9.0", default-features = false }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp-rom-sys"] }
esp-hal = { version = "1.0.0", default-features = false, features = [
  "unstable",
] }
esp-metadata-generated = { version = "0.3.0", default-features = false }
esp-println = { version = "0.16.0", default-features = false }
esp-radio = { version = "0.17.0", default-features = false }
esp-radio-rtos-driver = { version = "0.2.0", default-features = false }
esp-rom-sys = { version = "0.1.2", default-features = false }
esp-sync = { version = "0.1.0", default-features = false }
esp-wifi-sys = { version = "0.8.1", default-features = false }

esp-storage = { version = "0.8.0" }
xtensa-lx-rt = { version = "0.21.0", default-features = false }

linkme = { version = "0.3.32" }

ariel-os = { path = "src/ariel-os", default-features = false }
ariel-os-alloc = { path = "src/ariel-os-alloc", default-features = false }
ariel-os-bench = { path = "src/ariel-os-bench", default-features = false }
ariel-os-boards = { path = "src/ariel-os-boards", default-features = false }
ariel-os-buildinfo = { path = "src/ariel-os-buildinfo", default-features = false }
ariel-os-coap = { path = "src/ariel-os-coap", default-features = false }
ariel-os-debug = { path = "src/ariel-os-debug", default-features = false }
ariel-os-debug-log = { path = "src/ariel-os-debug-log", default-features = false }
ariel-os-embassy = { path = "src/ariel-os-embassy", default-features = false }
ariel-os-embassy-common = { path = "src/ariel-os-embassy-common" }
ariel-os-esp = { path = "src/ariel-os-esp" }
ariel-os-hal = { path = "src/ariel-os-hal", default-features = false }
ariel-os-identity = { path = "src/ariel-os-identity" }
ariel-os-macros = { path = "src/ariel-os-macros" }
ariel-os-nrf = { path = "src/ariel-os-nrf" }
ariel-os-power = { path = "src/ariel-os-power" }
ariel-os-random = { path = "src/ariel-os-random" }
ariel-os-rp = { path = "src/ariel-os-rp" }
ariel-os-rt = { path = "src/ariel-os-rt" }
ariel-os-runqueue = { path = "src/ariel-os-runqueue" }
ariel-os-sensors = { path = "src/ariel-os-sensors" }
ariel-os-sensors-registry = { path = "src/ariel-os-sensors-registry" }
ariel-os-sensors-utils = { path = "src/ariel-os-sensors-utils" }
ariel-os-stm32 = { path = "src/ariel-os-stm32" }
ariel-os-storage = { path = "src/ariel-os-storage" }
ariel-os-threads = { path = "src/ariel-os-threads" }
ariel-os-utils = { path = "src/ariel-os-utils", default-features = false }

const-str = "0.7.0"
const_panic = { version = "0.2.8", default-features = false }
defmt = { version = "1.0.0" }
defmt-rtt = { version = "1.1.0" }
document-features = "0.2.8"
fugit = { version = "0.3.7", default-features = false }
heapless = { version = "0.9.1", default-features = false }
ld-memory = { version = "0.2.9" }
log = { version = "0.4.20", default-features = false }
once_cell = { version = "1.21.3", default-features = false, features = [
  "critical-section",
] }
paste = { version = "1.0" }
pin-project-lite = "0.2.16"
rand = { version = "0.9.2", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
rtt-target = { version = "0.6.0" }

bt-hci = { version = "0.6.0" }
rp-pac = { version = "7.0", default-features = false }
serde = { version = "1.0.197", default-features = false }
static_cell = { version = "2.1.1", default-features = false }
trouble-host = { version = "0.5.0" }

# nrf-sdc 0.4.0 has not been released, yet. need it for bt-hci 0.6 bump
#nrf-sdc = { version = "0.4.0" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "e64ad081a6948b3439d1e811da36d39a5785dbda" }

nrf-modem = { version = "0.10.0" }
tinyrlibc = "0.5.0"

[workspace.lints.rust]
# rustc lints are documented here: https://doc.rust-lang.org/rustc/lints/listing/index.html
private_interfaces = "deny"
private_bounds = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
# ... until we figure out a way to generate a list of all used cfg variables
# across build configurations ...
unexpected_cfgs = "allow"
# When writing code, explicitly opt-out per module by adding `#[expect(unsafe_code)]`
unsafe_code = "deny"

[workspace.lints.clippy]
# Clippy lints are documented here: https://rust-lang.github.io/rust-clippy/master/index.html
doc_paragraphs_missing_punctuation = "warn"
indexing_slicing = "deny"
missing_safety_doc = { level = "warn" }
pedantic = { level = "warn", priority = -1 }
too_long_first_doc_paragraph = "warn"
too_many_lines = "allow"
unused_result_ok = "deny"
unused_trait_names = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
