[package]
name = "example-ble-advertise"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os" }
ariel-os-boards = { path = "../../src/ariel-os-boards" }

bt-hci = { version = "0.2.0" }
embassy-futures = { version = "0.1.1" }
embassy-time = { version = "0.4.0" }
trouble-host = { workspace = true }
