[package]
name = "ble-keyboard"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["time", "external-interrupts"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }

embassy-futures = { version = "0.1.1" }
embassy-sync = { workspace = true }
trouble-host = { workspace = true , features = ["derive", "security", "gatt"] }
usbd-hid = { version = "0.10.0", features = ["defmt"] }
static_cell = "2.1.1"

[lints]
workspace = true
