[package]
name = "ble-scanner"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["time"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }

embassy-futures = { version = "0.1.1" }
heapless = "0.8"
trouble-host = { workspace = true, features = ["derive", "scan"] }

[lints]
workspace = true
