[package]
name = "ble-serial-bridge"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["time", "uart"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }

embassy-futures = { version = "0.1.1" }
trouble-host = { workspace = true, features = ["security"] }
embedded-io-async = { workspace = true }
static_cell = "2.1.1"
heapless = "0.8.0"
embassy-sync = { workspace = true }
[lints]
workspace = true
