[package]
name = "camera"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["i2c"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embedded-hal-async = { workspace = true }
esp-hal = { workspace = true, features = ["unstable"] }
fugit = "0.3.7"
