[package]
name = "example-coap-client"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os" }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embedded-nal-coap = { workspace = true }
coap-request = "0.2.0-alpha.2"
coap-request-implementations = "0.1.0-alpha.4"
coap-handler-implementations = "0.5.0"
