[package]
name = "example-coap-server"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-sync = { workspace = true }
ariel-os = { path = "../../src/ariel-os" }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
coap-message = "0.3.2"
coap-message-demos = { version = "0.4.0", default-features = false }
coap-handler = "0.2.0"
coap-handler-implementations = "0.5.0"
