[package]
name = "display"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["time"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
tinybmp = "0.6.0"
