[package]
name = "gnss-sensor-reader"
edition.workspace = true
license.workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["sensors", "time"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
ariel-os-nrf91-gnss = { path = "../../src/ariel-os-nrf91-gnss", features = [
  "defmt",
] }
ariel-os-gnss-time-extension = { path = "../../src/ariel-os-gnss-time-extension", features = [
  "defmt",
] }
linkme = { workspace = true }

[lints]
workspace = true
