[package]
name = "gpio"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "external-interrupts",
  "time",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embassy-futures = { workspace = true }

[lints]
workspace = true
