[package]
name = "gps-read"
license.workspace = true
edition.workspace = true

publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["time"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
futures = { workspace = true, default-features = false }
embassy-sync = { workspace = true }

[build-dependencies]
cc = "1.2.27"
