[package]
name = "http-client"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "csprng",
  "dns",
  "mdns",
  "tcp",
  "time",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
rand_core = { workspace = true }
reqwless = { version = "0.13.0", default-features = true, features = [
  "embedded-tls",
] }
