[package]
name = "http-client"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "csprng",
  "dns",
  "mdns",
  "tcp",
  "time",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
rand_core = { workspace = true }
reqwless = { version = "0.13.0", default-features = true, features = [
  "embedded-tls",
] }

[lints]
workspace = true
