[package]
name = "http-client"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "csprng",
  "dns",
  "mdns",
  "tcp",
  "time",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }

# A bug in embedded-tls 0.18.0, which reqwless 0.14.0 depends on, makes this
# temporarily needed.
# The `heapless` feature is needed since 0.8.0-rc.2.
der = { version = "0.8", default-features = false, features = ["heapless"] }

rand_core = { workspace = true }
reqwless = { version = "0.14.0", default-features = true, features = [
  "embedded-tls",
] }

[lints]
workspace = true
