[package]
name = "http-server"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os" }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embassy-sync = { workspace = true }
picoserve = { version = "0.14.1", default-features = false, features = [
  "embassy",
] }
serde = { workspace = true, optional = true }

[features]
button-reading = ["dep:serde"]
