[package]
name = "i2c-scanner"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["i2c"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embedded-hal-async = { workspace = true }

[lints]
workspace = true
