[package]
name = "modem"
license.workspace = true
edition.workspace = true

publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["time"]}
ariel-os-boards = { path = "../../src/ariel-os-boards" }
nrf-modem = { workspace = true, features = ["nrf9151", "defmt", "modem-log", "modem-trace"] }
tinyrlibc = "0.5.0"
[build-dependencies]
cc = "1.2.27"
