[package]
name = "modem"
license.workspace = true
edition.workspace = true

publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["time"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
futures = { version = "0.3.0", default-features = false }

[build-dependencies]
cc = "1.2.27"
