[package]
name = "example-random"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Enabling the feature "random" is somewhat redundant with laze.yml's selects:
# random, but helps with interactive tools.
ariel-os = { path = "../../src/ariel-os", features = ["random"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
rand = { workspace = true }

[lints]
workspace = true
