[package]
name = "sensors-debug"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "i2c",
  "sensors",
  "time",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
ariel-os-sensor-lis2du12 = { path = "../../src/sensors/ariel-os-sensor-lis2du12" }
ariel-os-sensor-lps22df = { path = "../../src/sensors/ariel-os-sensor-lps22df" }
ariel-os-sensor-stts22h = { path = "../../src/sensors/ariel-os-sensor-stts22h" }
ariel-os-sensors = { path = "../../src/ariel-os-sensors" }
embassy-sync = { workspace = true }
once_cell = { workspace = true }

[lints]
workspace = true
