[package]
name = "example-storage"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["storage"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
arrayvec = { version = "0.7.4", default-features = false, features = ["serde"] }
heapless = { workspace = true, features = ["serde", "defmt-03"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
