[package]
name = "example-storage"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["storage"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
arrayvec = { version = "0.7.4", default-features = false, features = ["serde"] }
heapless = { workspace = true, features = ["defmt", "serde"] }
serde = { workspace = true, default-features = false, features = ["derive"] }

[lints]
workspace = true
