[package]
name = "tcp-client"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["tcp", "time", "idle-threads"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embedded-io-async = { workspace = true }

[lints]
workspace = true
