[package]
name = "tcp-echo"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embedded-io-async = "0.6.1"
heapless = { workspace = true }
ariel-os = { path = "../../src/ariel-os", features = [
  "override-network-config",
  "tcp",
  "time",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
