[package]
name = "thermometer"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "i2c",
  "sensors",
  "time",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
ariel-os-sensor-stts22h = { path = "../../src/sensors/ariel-os-sensor-stts22h" }
ariel-os-sensors = { workspace = true }

stm32-lcd-driver = { git = "https://codeberg.org/AudaciousAxiom/stm32-lcd-driver.git", rev = "264835ff4a98036920cbba403c259c0832d8371f" }

embassy-sync = { workspace = true }
once_cell = { workspace = true }

[lints]
workspace = true
