[package]
name = "udp-echo"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
heapless = { workspace = true }
ariel-os = { path = "../../src/ariel-os", features = [
  "override-network-config",
  "udp",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
