[package]
name = "usb-keyboard"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "time",
  "override-usb-config",
  "usb-hid",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embassy-sync = { workspace = true }
static_cell = { workspace = true }
