[package]
name = "usb-keyboard"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "override-usb-config",
  "time",
  "usb-hid",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embassy-sync = { workspace = true }
static_cell = { workspace = true }

[lints]
workspace = true
