[package]
name = "ariel-os-alloc"
version = "0.2.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
harness = false

[dependencies]
ariel-os-debug = { workspace = true }
ariel-os-utils = { workspace = true }

[target.'cfg(context = "cortex-m")'.dependencies]
embedded-alloc = { version = "0.6.0", default-features = false, features = [
  "tlsf",
] }

[target.'cfg(context = "esp")'.dependencies]
esp-alloc = { workspace = true, default-features = false }

[target.'cfg(context = "ariel-os")'.dev-dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["alloc"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }

embedded-test = { workspace = true }

[features]
_test = []
