[package]
name = "ariel-os-bench"
version = "0.2.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if = { workspace = true }
defmt = { workspace = true, optional = true }

[target.'cfg(context = "cortex-m")'.dependencies]
cortex-m = { workspace = true }

[target.'cfg(context = "esp")'.dependencies]
esp-hal = { workspace = true }

[features]
defmt = ["dep:defmt"]
