[package]
name = "ariel-os-bench"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }

[target.'cfg(context = "cortex-m")'.dependencies]
cortex-m = { workspace = true }

[target.'cfg(context = "esp")'.dependencies]
esp-hal = { workspace = true }

[features]
defmt = ["dep:defmt"]

[lints]
workspace = true
